# ICE2606

./: .gitignore  Makefile  README.md  pyproject.toml
Lab2/: .gitignore  guide.py  report.md
