[project]
name = "ice2606"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "marimo>=0.12.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pydub>=0.25.1",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
